# ComfyUI-MultiPoseToolkit

./: README.md  __init__.py  pyproject.toml  requirements.txt
toolkit/: __init__.py
toolkit/data/: __init__.py  geometry.py  keypoints.py  meta.py
toolkit/models/: __init__.py  runtime.py
toolkit/pipeline/: __init__.py  detector.py  retarget.py
toolkit/pose_utils/: __init__.py  human_visualization.py  pose2d_utils.py
toolkit/utils/: __init__.py  faces.py  image_ops.py  pose_render.py
workflows/: Multi-pose.json
